# oellm-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  core.jpbl-s02-02.582022  core.jpbl-s02-02.582032  core.jpbl-s02-02.582034  pyproject.toml  requirements-venv.txt
.github/actions/setup-skypilot/: action.yaml
.github/sky/: build-apptainer-arm64.yaml  build-apptainer.yaml  slurm-integration.yaml
.github/workflows/: build-and-push-apptainer.yml  ci.yml  slurm-integration.yml  test.yml
apptainer/: build_sif_local.sh  jupiter.def  jureca.def  leonardo.def  lumi.def  slurm-ci.def
containers/: jupiter-lighteval.def  jupiter.def  leonardo.def  slurm-ci.def
docs/: CONTAINERS.md  TASKS.md  VENV.md
oellm/: clusters.yaml  ingest.py  interactive_csv_builder.py  main.py  task-groups.yaml  task_cache.py  task_groups.py  template.sbatch  utils.py
oellm/light_eval_benchmarks/: flores-200-eu.txt
oellm/resources/: clusters.yaml  task-groups.yaml  template.sbatch
oellm/resources/custom_lm_eval_tasks/function_calling/: function_calling.yaml  utils.py
scripts/: pivot_results.py
sky/: build-apptainer.yaml  slurm-integration.yaml
tests/: test_datasets.py  test_schedule_evals.py  test_utils.py
tests/integration/: ci.def  conftest.py  test_slurm.py
